Revert "fix: Don't use fallback color with initial to ensure dark mode stillll works"
This reverts commit 87b415f698ba4a6e0cc7137522cdb09b9cc706e9.

--- a/_includes/styles.css
+++ b/_includes/styles.css
@@ -59,8 +59,8 @@ a {
   padding: 1rem;
   font-size: 3vmax;
 
-  /* resetting the color */
-  color: initial;
+  /* setting text color of links to match other canvastext */
+  color: var(--canvastext);
   text-align: center;
   margin: 1rem 0;
   /* seems to cause the border I want via apple */
